some menu api added for poc.
